--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ tenacity = "^8.1.0"
 tqdm = "^4.64.1"
 python-levenshtein = "^0.20.9"
 autoflake = "^2.0.0"
+pydantic = "^1.10.3"
+sqlalchemy = "^1.4.45"
 
 
 [tool.poetry.group.test.dependencies]
