--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-levenshtein = "^0.20.9"
 autoflake = "^2.0.0"
 pydantic = "^1.10.3"
 sqlalchemy = "^1.4.45"
+alembic = "^1.9.1"
 
 
 [tool.poetry.group.test.dependencies]
