--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ autoflake = "^2.0.0"
 pydantic = "^1.10.3"
 sqlalchemy = "^1.4.45"
 alembic = "^1.9.1"
+psycopg2-binary = "^2.9.5"
+sqlalchemy-utils = "^0.39.0"
 
 
 [tool.poetry.group.test.dependencies]
