--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ sqlalchemy-utils = "^0.39.0"
 pytest = "^7.2.0"
 
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.19.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
