--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["badr ben mbarek <badr.benb@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
 requests = "^2.28.1"
 pandas = "^1.5.2"
 plotly = "^5.11.0"
@@ -21,11 +21,11 @@ sqlalchemy = "^1.4.45"
 alembic = "^1.9.1"
 psycopg2-binary = "^2.9.5"
 sqlalchemy-utils = "^0.39.0"
+streamlit = "^1.16.0"
 
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
-
 
 
 [tool.poetry.group.dev.dependencies]
